ST-1158 JVM parameter add for JAVA 17 (#700)
Co-authored-by: hmctscivil <version1rhel@hmctscivil.mshome.net>