@@ -117,6 +117,7 @@ tasks.withType(Test) {
 test {
   failFast = true
   useJUnitPlatform()
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED']
 }
 
 task functional(type: Test) {
